--- a/.github/workflows/change.yaml
+++ b/.github/workflows/change.yaml
@@ -1,8 +1,8 @@
 name: MyWorkflow
 
 on:
-  repository_dispatch:
-    types: [change-sha]
+  push:
+    branches: [ main ]
 
 jobs:
   change-image-tag:
@@ -11,13 +11,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
         
-      - name: Run Image Tag Updater in the argocd repository
-        uses: somaz94/image-tag-updater@v1
+      - name: GitOps - Update Image Tag
+        uses: adwert-it/gitops-image-update@v1
         with:
-          new_tag: ${{ github.event.client_payload.sha }}
-          target_path: environment/ 
-          file_pattern: "dev*/values.yaml"
-          branch: main
-          github_token: ${{ secrets.PAT }}
-          repo: IliaDiv/hos-argocd
+            REPOSITORY_NAME: 'irbis3/hos-argocd'
+            ACCESS_TOKEN: ${{ secrets.PAT }}
+            BRANCH: "master"
+            VALUES_FILE_PATH: 'environment/dev/values.yaml'
+            VALUE_NAME: 'imageTag'
+            TAG: '${{ github.sha }}'
+
           
