--- a/.github/workflows/change.yaml
+++ b/.github/workflows/change.yaml
@@ -16,10 +16,11 @@ jobs:
         with:
             REPOSITORY_NAME: 'IliaDiv/hos-argocd'
             ACCESS_TOKEN: ${{ secrets.PAT }}
-            BRANCH: "master"
+            BRANCH: "main"
             VALUES_FILE_PATH: 'environment/dev/values.yaml'
             VALUE_NAME: 'imageTag'
             TAG: '${{ github.sha }}'
 
           
+
 
