--- a/environment/dev/values.yaml
+++ b/environment/dev/values.yaml
@@ -4,7 +4,8 @@ frontend:
   replicas: 1
   reactFrontend:
     name: react-frontend
-    image: irbis3/frontend:latest
+    image: irbis3/frontend
+    imageTag: latest
     port: 3000
   resources:
     requests:
@@ -28,6 +29,7 @@ backend:
   flaskBackend:
     name: flask-backend
     image: irbis3/backend
+    imageTag: latest
     port: 5000
   resources:
     requests:
@@ -51,6 +53,7 @@ postgresql:
   postgresql:
     name: postgresql
     image: postgres
+    imageTag: latest
     port: 5432
   resources:
     requests:
@@ -72,6 +75,7 @@ n8n:
   n8n:
     name: n8n
     image: irbis3/n8n
+    imageTag: latest
     port: 5678
   resources:
     requests:
