--- a/.github/workflows/change.yaml
+++ b/.github/workflows/change.yaml
@@ -11,11 +11,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
         
-      - name: GitOps - Update Image Tag
-        run: |
-            sed -i -E "s/^(\\s*imageTag:\\s*).*/\\1${{ github.event.client_payload.sha }}/" environment/dev/values.yaml
-            echo "Updating image tag to ${{ github.event.client_payload.sha }}"
-            echo "environment/dev/values.yaml"
-            echo "imageTag"
-            echo "{{ github.event.client_payload.sha }}"
+      - uses: OpsVerseIO/image-updater-action@0.1.0
+        with:
+          valueFile: 'environment/dev/values.yaml'
+          branch: dev
+          targetBranch: main
+          createPR: 'true'
+          description: Test GitHub Action
+          message: 'Update All Images' 
+          title: 'Version Updates '
+          changes: |
+            {
+              "backend.flaskBackend.imageTag": "${{ github.event.client_payload.sha }}",
+              "frontend.reactFrontend.imageTag": "${{ github.event.client_payload.sha }}",
+              "n8n.n8n.imageTag": "${{ github.event.client_payload.sha }}"
+            }
           
