--- a/.github/workflows/change.yaml
+++ b/.github/workflows/change.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: OpsVerseIO/image-updater-action@0.1.0
         with:
           valueFile: 'environment/dev/values.yaml'
-          branch: dev
+          branch: main
           targetBranch: main
           createPR: 'true'
           description: Test GitHub Action
