--- a/.github/workflows/change.yaml
+++ b/.github/workflows/change.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: OpsVerseIO/image-updater-action@0.1.0
         with:
           valueFile: 'environment/dev/values.yaml'
-          branch: main
+          branch: test
           targetBranch: main
           createPR: 'true'
           token: ${{ secrets.PAT }}
