--- a/applicationset.yaml
+++ b/applicationset.yaml
@@ -8,10 +8,7 @@ spec:
     - list:
         elements:
           - name: dev
-            argocdURL: https://github.com/IliaDiv/hos-argocd.git
-            argocdBranch: HEAD
-            codeURL: https://github.com/IliaDiv/Home-Office-Store.git
-            codeBranch: dev
+            namespace: dev
             syncPolicy:
               syncOptions:
               - CreateNamespace=true
@@ -20,10 +17,7 @@ spec:
                 selfHeal: true
                 allowEmpty: true
           - name: staging
-            argocdURL: https://github.com/IliaDiv/hos-argocd.git
-            argocdBranch: HEAD
-            codeURL: https://github.com/IliaDiv/Home-Office-Store.git
-            codeBranch: staging
+            namespace: staging
             syncPolicy:
               syncOptions:
               - CreateNamespace=true
@@ -32,10 +26,7 @@ spec:
                 selfHeal: true
                 allowEmpty: true
           - name: prod
-            argocdURL: https://github.com/IliaDiv/hos-argocd.git
-            argocdBranch: HEAD
-            codeURL: https://github.com/IliaDiv/Home-Office-Store.git
-            codeBranch: prod
+            namespace: prod
             syncPolicy:
               syncOptions:
               - CreateNamespace=true
@@ -51,16 +42,12 @@ spec:
       project: default
       syncPolicy: {{.syncPolicy}}
       source:
-        - repoURL: '{{.argocdURL}}'
-          targetRevision: '{{.argocdBranch}}'
-          path: HEAD
-          ref: values
-        - repoURL: '{{.codeURL}}'
-          targetRevision: '{{.codeBranch}}'
+        - repoURL: https://github.com/IliaDiv/hos-argocd.git
+          targetRevision: HEAD
           path: kubernetes/Home-Office-Store
           helm:
             valueFiles:
-            - $values/environment/{{.codeBranch}}/values.yaml
+            - $values/environment/{{.namespace}}/values.yaml
       destination:
         server: https://kubernetes.default.svc
-        namespace: {{.codeBranch}}
+        namespace: {{.namespace}}
