--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -128,11 +128,11 @@ spec:
         ports:
         - containerPort: {{ .Values.frontend.reactFrontend.port }}
         env:
-        - name: NEXT_PUBLIC_API_URL
-          valueFrom:
-            configMapKeyRef:
-              name: {{ .Values.cm.name }}
-              key: backend_svc
+        # - name: NEXT_PUBLIC_API_URL
+        #   valueFrom:
+        #     configMapKeyRef:
+        #       name: {{ .Values.cm.name }}
+        #       key: backend_svc
         - name: NODE_ENV
           value: development
         {{- include "Home-Office-Store.frontend.resources" . | nindent 8 }}
