--- a/environment/dev/values.yaml
+++ b/environment/dev/values.yaml
@@ -100,6 +100,7 @@ n8nCm:
     N8N_DEFAULT_BINARY_DATA_MODE=filesystem
     N8N_DEFAULT_LOCALE=en
     N8N_METRICS=true
+    N8N_METRICS_INCLUDE_DEFAULT=true
     N8N_DIAGNOSTICS_ENABLED=false
     EXECUTIONS_DATA_PRUNE=true
     EXECUTIONS_DATA_MAX_AGE=168
