--- a/environment/dev/values.yaml
+++ b/environment/dev/values.yaml
@@ -90,6 +90,7 @@ n8nCm:
     DB_TYPE=postgresdb
     N8N_DEFAULT_BINARY_DATA_MODE=filesystem
     N8N_DEFAULT_LOCALE=en
+    N8N_METRICS="true"
     N8N_METRICS_INCLUDE_DEFAULT_METRICS=true
     N8N_METRICS_INCLUDE_CACHE_METRICS=true
     N8N_METRICS_INCLUDE_MESSAGE_EVENT_BUS_METRICS=true
