--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -215,8 +215,8 @@ spec:
             secretKeyRef:
               name: {{ .Values.secrets.name }}
               key: n8n_encryption_key
-        - name: N8N_METRICS
-          value: "true"
+        # - name: N8N_METRICS
+        #   value: "true"
         - name: OPENAI_API_KEY
           valueFrom:
             secretKeyRef:
