--- a/environment/dev/values.yaml
+++ b/environment/dev/values.yaml
@@ -85,28 +85,20 @@ n8n:
       protocol: TCP
       targetPort: 5678
 n8nCm:
-  name: n8n-config
-  envn8n: |
-    DB_TYPE=postgresdb
-    N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-    N8N_DEFAULT_LOCALE=en
-    N8N_METRICS="true"
-    N8N_METRICS_INCLUDE_DEFAULT_METRICS=true
-    N8N_METRICS_INCLUDE_CACHE_METRICS=true
-    N8N_METRICS_INCLUDE_MESSAGE_EVENT_BUS_METRICS=true
-    N8N_METRICS_INCLUDE_WORKFLOW_ID_LABEL=true
-    N8N_METRICS_INCLUDE_API_METHOD_LABEL=true
-    N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL=true
-    N8N_METRICS_QUEUE_METRICS_INTERVAL=10
-    N8N_DIAGNOSTICS_ENABLED=true
-    N8N_API_AUTH_ENABLED=true
-    N8N_SKIP_SETUP=true
-    N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
-    N8N_USER_MANAGEMENT_DISABLED=true
-    N8N_HOST=0.0.0.0
-    N8N_PORT=5678
-    N8N_PROTOCOL=http
-    N8N_BLOCK_ENV_ACCESS_IN_NODE=false
+  envn8n:
+    name: n8n-config
+    DB_TYPE: "postgresdb"
+    N8N_DEFAULT_BINARY_DATA_MODE: "filesystem"
+    N8N_DEFAULT_LOCALE: "en"
+    N8N_METRICS: "true"
+    N8N_METRICS_INCLUDE_DEFAULT_METRICS: "true"
+    N8N_METRICS_INCLUDE_CACHE_METRICS: "true"
+    N8N_METRICS_INCLUDE_MESSAGE_EVENT_BUS_METRICS: "true"
+    N8N_METRICS_INCLUDE_WORKFLOW_ID_LABEL: "true"
+    N8N_METRICS_INCLUDE_API_METHOD_LABEL: "true"
+    N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL: "true"
+    N8N_METRICS_QUEUE_METRICS_INTERVAL: "10"
+    N8N_DIAGNOSTICS_ENABLED: "true"
 cm:
   name: general-config
   db_name: postgres
