synchornized values.yaml files

--- a/environment/prod/values.yaml
+++ b/environment/prod/values.yaml
@@ -1,20 +1,18 @@
----
 frontend:
   name: react-frontend
   replicas: 1
   reactFrontend:
     name: react-frontend
     image: irbis3/frontend
-    imageTag: latest
+    imageTag: 387c1f82f5eda979e8c5ee7c1556a3c2d43e62e3
     port: 80
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "100m"
+      memory: 256Mi
+      cpu: 100m
     limits:
-      memory: "512Mi"
-      cpu: "500m"
-
+      memory: 512Mi
+      cpu: 500m
   service:
     name: frontend-svc
     type: ClusterIP
@@ -22,23 +20,21 @@ frontend:
       port: 80
       protocol: TCP
       targetPort: 80
-
 backend:
   name: flask-backend
-  replicas: 2
+  replicas: 1
   flaskBackend:
     name: flask-backend
     image: irbis3/backend
-    imageTag: latest
+    imageTag: 387c1f82f5eda979e8c5ee7c1556a3c2d43e62e3
     port: 5000
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "100m"
+      memory: 256Mi
+      cpu: 100m
     limits:
-      memory: "512Mi"
-      cpu: "500m"
-
+      memory: 512Mi
+      cpu: 500m
   service:
     name: backend-svc
     type: ClusterIP
@@ -46,44 +42,41 @@ backend:
       port: 5000
       protocol: TCP
       targetPort: 5000
-
 postgresql:
   name: postgresql
   replicas: 1
   postgresql:
     name: postgresql
     image: postgres
+    imageTag: latest
     port: 5432
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "100m"
+      memory: 256Mi
+      cpu: 100m
     limits:
-      memory: "512Mi"
-      cpu: "500m"
-
+      memory: 512Mi
+      cpu: 500m
   service:
     name: postgresql-svc
     type: ClusterIP
     clusterIP: None
     clusterIPs: None
-
 n8n:
   name: n8n
   replicas: 1
   n8n:
     name: n8n
     image: irbis3/n8n
-    imageTag: latest
+    imageTag: 387c1f82f5eda979e8c5ee7c1556a3c2d43e62e3
     port: 5678
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "100m"
+      memory: 512Mi
+      cpu: 250m
     limits:
-      memory: "512Mi"
-      cpu: "500m"
-
+      memory: 1024Mi
+      cpu: 1000m
   service:
     name: n8n-svc
     type: ClusterIP
@@ -91,42 +84,32 @@ n8n:
       port: 5678
       protocol: TCP
       targetPort: 5678
-
 n8nCm:
-  name: n8n-config
-  envn8n: |
-    DB_TYPE=postgresdb
-    N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-    N8N_DEFAULT_LOCALE=en
-    N8N_METRICS=true
-    N8N_DIAGNOSTICS_ENABLED=false
-    EXECUTIONS_DATA_PRUNE=true
-    EXECUTIONS_DATA_MAX_AGE=168
-    N8N_API_AUTH_ENABLED=true
-    N8N_SKIP_SETUP=true
-    N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
-    N8N_USER_MANAGEMENT_DISABLED=true
-    N8N_PERSONALIZATION_ENABLED=false
-    N8N_HOST=0.0.0.0
-    N8N_PORT=5678
-    N8N_PROTOCOL=http
-    N8N_DISABLE_UI=false
-    N8N_DISABLE_PRODUCTION_MAIN_PROCESS=false
-    N8N_BLOCK_ENV_ACCESS_IN_NODE=false
-    N8N_RUNNERS_ENABLED=true
-
+  envn8n:
+    name: n8n-config
+    DB_TYPE: "postgresdb"
+    N8N_DEFAULT_BINARY_DATA_MODE: "filesystem"
+    N8N_DEFAULT_LOCALE: "en"
+    N8N_METRICS: "true"
+    N8N_METRICS_INCLUDE_DEFAULT_METRICS: "true"
+    N8N_METRICS_INCLUDE_CACHE_METRICS: "true"
+    N8N_METRICS_INCLUDE_MESSAGE_EVENT_BUS_METRICS: "true"
+    N8N_METRICS_INCLUDE_WORKFLOW_ID_LABEL: "true"
+    N8N_METRICS_INCLUDE_API_METHOD_LABEL: "true"
+    N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL: "true"
+    N8N_METRICS_QUEUE_METRICS_INTERVAL: "10"
+    N8N_DIAGNOSTICS_ENABLED: "true"
 cm:
   name: general-config
   db_name: postgres
   db_type: postgresdb
-  db_port: "5432"
+  db_port: '5432'
   db_host: postgresql-0.postgresql-svc
   backend_svc: /api
   n8n_webhook_url: http://n8n-svc:5678/webhook/chat
   cors_origins: http://localhost,http://localhost:3000,http://frontend-svc:3000,http://localhost:80,http://frontend-svc
   webhook_url: http://n8n-svc:5678
   n8n_editor_base_url: http://localhost:5678
-
 secrets:
   name: general-secrets
   data:
@@ -135,7 +118,6 @@ secrets:
     n8n_api_key: n8n-api-key-12345
     n8n_encryption_key: your-encryption-key
     open_ai_api_key: $OPENAI_API_KEY
-
 ingress:
   name: main-ingress
   enabled: true
@@ -151,3 +133,10 @@ ingress:
     n8nPaths:
       path: /webhook/chat
       pathType: Prefix
+
+grafana:
+  sidecar:
+    dashboards:
+      enabled: true
+      label: grafana_dashboard
+
