--- a/kubernetes/Home-Office-Store/templates/local-secrets.yaml
+++ b/kubernetes/Home-Office-Store/templates/local-secrets.yaml
@@ -1,3 +1,7 @@
+##############################################################################################
+# Secrets
+##############################################################################################
+{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
 apiVersion: v1
 kind: Secret
 metadata:
