--- a/kubernetes/Home-Office-Store/templates/statefulset.yaml
+++ b/kubernetes/Home-Office-Store/templates/statefulset.yaml
@@ -1,5 +1,8 @@
 ---
+##############################################################################################
 # PostgreSQL StatefulSet
+##############################################################################################
+{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
 apiVersion: apps/v1
 kind: StatefulSet 
 metadata:
