--- a/kubernetes/Home-Office-Store/templates/traefik.yaml
+++ b/kubernetes/Home-Office-Store/templates/traefik.yaml
@@ -1,3 +1,7 @@
+##############################################################################################
+# Traefik Ingress
+##############################################################################################
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
