--- a/local-applicationset.yaml
+++ b/local-applicationset.yaml
@@ -22,19 +22,21 @@ spec:
       project: default
       syncPolicy:
         automated:
-          enabled: true
-          prune: true
+          prune: true # delete if a resource was deleted
           selfHeal: true
-          allowEmpty: true
+          allowEmpty: false # don't allow empty resources
         syncOptions:
         - CreateNamespace=true
+        - Validate=true # don't apply if doesn't validated
+        - PrunePropagationPolicy=foreground # safety measure to delete EVERYTHING
+        - PruneLast=true # delete as the last option, after every change/add is done
       source:
         repoURL: https://github.com/IliaDiv/hos-argocd.git
         targetRevision: HEAD
         path: kubernetes/Home-Office-Store
         helm:
           valueFiles:
-            - ../../environment/{{namespace}}/values.yaml
+            - ../../environment/{{namespace}}/local-values.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{namespace}}'
