Fixed: added {{- end }} to the {{ -if }} statements

--- a/kubernetes/Home-Office-Store/templates/eks-service.yaml
+++ b/kubernetes/Home-Office-Store/templates/eks-service.yaml
@@ -24,6 +24,7 @@ spec:
     app: backend
     {{- include "Home-Office-Store.labels" . | nindent 4 }}
   type: {{ .Values.backend.service.type }}
+{{- end }}
 
 ---
 ##############################################################################################
@@ -51,6 +52,7 @@ spec:
     app: frontend
     {{- include "Home-Office-Store.labels" . | nindent 4 }}
   type: {{ .Values.frontend.service.type }}
+{{- end }}
 
 ---
 ##############################################################################################
@@ -78,3 +80,4 @@ spec:
     app: n8n
     {{- include "Home-Office-Store.labels" . | nindent 4 }}
   type: {{ .Values.n8n.service.type }}
+{{- end }}
