--- a/kubernetes/Home-Office-Store/templates/statefulset.yaml
+++ b/kubernetes/Home-Office-Store/templates/statefulset.yaml
@@ -44,3 +44,4 @@ spec:
               name: {{ .Values.secrets.name }}
               key: db_password
         {{- include "Home-Office-Store.postgresql.resources" . | nindent 8 }}
+{{- end }}
