--- a/kubernetes/Home-Office-Store/templates/traefik.yaml
+++ b/kubernetes/Home-Office-Store/templates/traefik.yaml
@@ -2,6 +2,7 @@
 # Traefik Ingress
 ##############################################################################################
 
+{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -39,3 +40,4 @@ spec:
             name: {{ .Values.n8n.service.name }}
             port:
               number: {{ .Values.n8n.service.ports.port }}
+{{- end }}
