--- a/kubernetes/Home-Office-Store/templates/local-secrets.yaml
+++ b/kubernetes/Home-Office-Store/templates/local-secrets.yaml
@@ -1,7 +1,7 @@
 ##############################################################################################
 # Secrets
 ##############################################################################################
-{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
+#{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,4 +13,4 @@ stringData:
   n8n_api_key: {{ .Values.secrets.data.n8n_api_key }}
   n8n_encryption_key: {{ .Values.secrets.data.n8n_encryption_key }}
   open_ai_api_key: {{ .Values.secrets.data.open_ai_api_key }}
-{{- end }}
+#{{- end }}
