--- a/environment/dev/local/values.yaml
+++ b/environment/dev/local/values.yaml
@@ -77,6 +77,31 @@ n8n:
       targetPort: 5678
 
 ##############################################################################################
+# PostgreSQL
+##############################################################################################
+
+postgresql:
+  name: postgresql
+  replicas: 1
+  postgresql:
+    name: postgresql
+    image: postgres
+    imageTag: latest
+    port: 5432
+  resources:
+    requests:
+      memory: 256Mi
+      cpu: 100m
+    limits:
+      memory: 512Mi
+      cpu: 500m
+  service:
+    name: postgresql-svc
+    type: ClusterIP
+    clusterIP: None
+    clusterIPs: None
+
+##############################################################################################
 # n8n-CM
 ##############################################################################################
 
