--- a/eks-applicationset.yaml
+++ b/eks-applicationset.yaml
@@ -32,7 +32,7 @@ spec:
         - PruneLast=true # delete as the last option, after every change/add is done
       source:
         repoURL: https://github.com/IliaDiv/hos-argocd.git
-        targetRevision: HEAD
+        targetRevision: test
         path: kubernetes/Home-Office-Store
         helm:
           valueFiles:
