--- a/kubernetes/Home-Office-Store/templates/local-service.yaml
+++ b/kubernetes/Home-Office-Store/templates/local-service.yaml
@@ -78,7 +78,7 @@ spec:
 # PostgreSQL Service
 ##############################################################################################
 
-#{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
+{{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -98,5 +98,5 @@ spec:
     - name: {{ .Values.postgresql.name }}
       port: {{ .Values.postgresql.postgresql.port }}
       targetPort: {{ .Values.postgresql.postgresql.port }}
-#{{- end }}
+{{- end }}
 ---
