--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -107,11 +107,25 @@ spec:
           done
           echo "Database is ready!"
         env:
+        ### DB
+        ### LOCAL
+        {{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
         - name: DB_HOST
           valueFrom:
             configMapKeyRef:
               name: {{ .Values.cm.name }}
               key: db_host
+        {{- end }}
+        ###
+        ### EKS
+        {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: postgres-endpoint
+              key: db_host
+        {{- end }}
+        ###
         - name: DB_PORT
           valueFrom:
             configMapKeyRef:
