--- a/environment/dev/eks/values.yaml
+++ b/environment/dev/eks/values.yaml
@@ -18,7 +18,7 @@ frontend:
       cpu: 500m
   service:
     name: frontend-svc
-    type: ClusterIP
+    type: NodePort
     ports:
       port: 80
       protocol: TCP
@@ -44,7 +44,7 @@ backend:
       cpu: 500m
   service:
     name: backend-svc
-    type: ClusterIP
+    type: NodePort
     ports:
       port: 5000
       protocol: TCP
@@ -70,7 +70,7 @@ n8n:
       cpu: 1000m
   service:
     name: n8n-svc
-    type: ClusterIP
+    type: NodePort
     ports:
       port: 5678
       protocol: TCP
@@ -148,7 +148,7 @@ secrets:
     db_password: psql_password
     n8n_api_key: n8n-api-key-12345
     n8n_encryption_key: your-encryption-key
-    open_ai_api_key: $OPENAI_API_KEY
+    open_ai_api_key: check
 
 ##############################################################################################
 # Ingress
@@ -161,7 +161,7 @@ ingress:
   enabled: true
   className: alb
   rules:
-    host: localhost
+    host: www.iliadiv.online
     frontendPaths:
       path: /
       pathType: Prefix
